Fix background image shift

--- a/packages/scrabble-solver/src/components/Board/Board.module.scss
+++ b/packages/scrabble-solver/src/components/Board/Board.module.scss
@@ -10,12 +10,6 @@
   border-radius: var(--border--radius);
 }
 
-.image {
-  position: absolute;
-  inset: var(--border--width);
-  border-radius: inherit;
-}
-
 .floating {
   position: absolute;
   z-index: var(--z-index--actions);
